# Minecraft-Remake

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  build.sh  clean.sh  flamegraph.sh  generate-flamegraph.sh  load-cmake.sh  profile.sh  project.lua  run.sh  setup.bat
assets/shaders/: chunk.frag  chunk.vert  debug.frag  debug.vert  shader.frag  shader.vert  sky-object.vert  sky.frag  sky.vert  sprite.frag  sprite.vert  star.frag  star.vert
assets/shaders/sky/: sky-object.frag  sky.frag  star.frag  star.vert  sun-moon.frag  sun-moon.vert
assets/textures/application/: icon.rc
generators/Version/: CMakeLists.txt  Version.cpp.in  Version.h.in
include/glad/: glad.h
lib/glad/: CMakeLists.txt  glad.c
lib/glad/include/glad/: glad.h
lib/glfw/examples/: boing.c  gears.c
lib/stb_image/: CMakeLists.txt
lib/stb_image_write/: CMakeLists.txt  stb_image_write.h
lib/thread-pool/: CMakeLists.txt
res/shaders/: shader.frag  shader.vert
src/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Color.cpp  Color.h  Colors.h  Common.cpp  Common.h  Game.cpp  Game.h  Hash.h  LogManager.cpp  LogManager.h  Logger.cpp  Logger.h  Main.cpp  Profiler.cpp  Profiler.h  Rectangle.cpp  Rectangle.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h  TimeA.h  Timers.h  Transform.h  Window.h  glad.c  main.cpp
src/Graphics/: CMakeLists.txt  Camera.cpp  Camera.h  CameraFrustum.cpp  CameraFrustum.h  ChunkRenderer.cpp  ChunkRenderer.h  CubeMap.cpp  CubeMap.h  FragmentShader.cpp  FragmentShader.h  GL.h  GraphicsResource.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  TextDrawParams.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp  VertexShader.h  Window.cpp  Window.h
src/Graphics/Materials/: CMakeLists.txt  ChunkMaterial.cpp  ChunkMaterial.h  DebugMaterial.cpp  DebugMaterial.h  SkyMaterial.cpp  SkyMaterial.h  SkyObjectMaterial.cpp  SkyObjectMaterial.h  SpriteMaterial.cpp  SpriteMaterial.h  StarMaterial.cpp  StarMaterial.h  SunMoonMaterial.cpp  SunMoonMaterial.h
src/Graphics/Renderers/: CMakeLists.txt  ChunkMaterial.cpp  ChunkMaterial.h  ChunkRenderer.cpp  ChunkRenderer.h  Renderer.cpp  Renderer.h  SkyMaterial.cpp  SkyMaterial.h  SkyRenderer.cpp  SkyRenderer.h  TextRenderer.cpp  TextRenderer.h  UIRenderer.cpp  UIRenderer.h
src/Input/: CMakeLists.txt  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Key.h  MouseButton.h
src/Noise/: CMakeLists.txt  Noise.cpp  Noise.h  Perlin.cpp  Perlin.h
src/Physics/: CMakeLists.txt  Physics.cpp  Physics.h  RayHitInfo.h
src/Random/: CMakeLists.txt  Noise.cpp  Noise.h  NoiseGenerator.cpp  NoiseGenerator.h  Perlin.cpp  Perlin.h  Random.cpp  Random.h  RandomTests.cpp  RandomTests.h
src/UI/: CMakeLists.txt  UI.cpp  UI.h  UIDimension.cpp  UIDimension.h  UIElement.cpp  UIElement.h  UIState.cpp  UIState.h
src/UI/Elements/: CMakeLists.txt  UIButton.cpp  UIButton.h  UISprite.cpp  UISprite.h  UIText.cpp  UIText.h
src/UI/States/: CMakeLists.txt  Crosshair.cpp  UICrosshair.cpp  UICrosshair.h  UIDebug.cpp  UIDebug.h  UIMainMenu.cpp  UIMainMenu.h  UIPauseMenu.cpp  UIPauseMenu.h
src/World/: Biome.h  BiomeType.h  Block.cpp  Block.h  BlockData.cpp  BlockData.h  BlockMeshType.h  BlockType.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkPriorityQueue.cpp  ChunkPriorityQueue.h  Coords.h  Entity.cpp  Entity.h  Object.cpp  Object.h  Transform.cpp  Transform.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
src/World/Biomes/: Biomes.h  CMakeLists.txt
src/World/Blocks/: AirBlock.h  Blocks.h  CMakeLists.txt  GrassBlock.h  SolidBlock.h  TallGrassBlock.h  WoodBlock.h
src/World/Generation/: BiomesPass.cpp  CMakeLists.txt  CavesPass.cpp  DecorationsPass.cpp  StructuresPass.cpp  TerrainPass.cpp  WorldGenerator.cpp  WorldGenerator.h
