target_sources(Minecraft_Remake PRIVATE
    Camera.cpp
    Camera.h
    CameraFrustum.cpp
    CameraFrustum.h
    CubeMap.cpp
    CubeMap.h
    FragmentShader.cpp
    FragmentShader.h
    GL.h
    IndexBuffer.cpp
    IndexBuffer.h
    Material.cpp
    Material.h
    Mesh.cpp
    Mesh.h
    Quad.cpp
    Quad.h
    Shader.cpp
    Shader.h
    Sprite.h
    Texture.cpp
    Texture.h
    VertexArray.cpp
    VertexArray.h
    VertexBuffer.cpp
    VertexBuffer.h
    VertexShader.cpp
    VertexShader.h
)

add_subdirectory(Materials)
add_subdirectory(Renderers)
